src/instances/fio/snapshots/rustsat__instances__fio__dimacs__tests__opt__wcnf_invalid_before_header.snap
---
source: src/instances/fio/dimacs.rs
expression: "c test\nthis is an invalid line\np wcnf five 2 42\n42 1 2 0\n10 -3 4 5 0\n"
---
Parsing error: error: invalid wcnf p-line
  ╭▸ 
2 │ this is an invalid line
  ╰╴━ here
